Create new function for calculating point coords